<resources>
    <string name="app_name">BilliardShop</string>
    <string name="app_name_1">Billiard German</string>
    <string name="splash_text">Committed to quality products</string>
    <string name="germanduy">Germanduy</string>

    //dialog
    <string name="waiting_message">Vui lòng đợi…</string>

    // action
    <string name="action_ok">Đồng ý</string>
    <string name="action_cancel">Hủy bỏ</string>

    // Tab Menu
    <string name="home">Trang chủ</string>
    <string name="cart">Giỏ hàng</string>
    <string name="feedback">Phản hồi</string>
    <string name="contact">Liên hệ</string>
    <string name="order">Lịch sử</string>

    // msg
    <string name="error_not_connect_to_internet">Vui lòng kiểm tra kết nối mạng của bạn</string>
    <string name="msg_exit_app">Bạn có muốn thoát ứng dụng?</string>

    <string name="category_title">Danh mục</string>
    <string name="cue_suggest">Gợi ý cơ</string>
    <string name="cue_detail_title">Thông số cơ</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="added_to_cart">Đã thêm vào giỏ hàng</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="send_feedback_success">Gửi phản hồi thành công!</string>
    <string name="name_require">Vui lòng nhập Họ và Tên</string>
    <string name="comment_require">Vui lòng nhập phản hồi của bạn</string>
    <string name="order_cart">Đặt Hàng</string>
    <string name="total">Tổng Tiền:</string>
    <string name="delete">Xóa</string>
    <string name="confirm_delete_cue">Xác nhận xóa khỏi giỏ hàng</string>
    <string name="message_delete_cue">Bạn có chắc chắn muốn xóa cơ này không?</string>
    <string name="dialog_cancel">Hủy</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="address_delivery">Địa chỉ giao hàng</string>
    <string name="message_enter_infor_order">Vui lòng điền đầy đủ thông tin giao hàng</string>
    <string name="hint_search_name">Tên cơ</string>
    <string name="price_label">Giá:</string>
    <string name="description_label">Mô tả</string>
    <string name="more_image_label">Một số hình ảnh khác</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="payment_method_cash">Tiền mặt</string>
    <string name="label_sub">-</string>
    <string name="label_add">+</string>
    <string name="label_quantity_1">1</string>
    <string name="label_price_0">0 $</string>
    <string name="label_discount">Giảm</string>

    <string name="label_facebook">Facebook</string>
    <string name="label_call">Call Phone</string>
    <string name="label_gmail">Gmail</string>
    <string name="label_skype">Skype</string>
    <string name="label_youtube">Youtube</string>
    <string name="label_zalo">Zalo</string>

    <string name="msg_get_date_error">Lỗi đã xảy ra, vui lòng thử lại sau</string>
    <string name="msg_order_success">Đặt hàng thành công, vui lòng check đơn hàng trong phần Lịch sử</string>

    <string name="feedback_name">Họ và Tên (*)</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_phone">Số điện thoại</string>
    <string name="feedback_comment">Bình luận (*)</string>
    <string name="send_feedback">Gửi phản hồi</string>

    <string name="status_new">Chờ xử lý</string>
    <string name="status_cancel">Hủy đơn hàng</string>
    <string name="status_process">Đang giao hàng</string>
    <string name="status_success">Thành công</string>
    <string name="status_fail">Thất bại</string>
    <string name="quantity">Số lượng:</string>
    <string name="list_cue_order">Danh sách cơ trong đơn hàng</string>

    <string name="label_id">Mã đơn hàng:</string>
    <string name="label_name">Họ tên:</string>
    <string name="label_phone">Số điện thoại:</string>
    <string name="label_address">Địa chỉ nhận:</string>
    <string name="label_price">Tổng tiền:</string>
    <string name="label_date">Ngày đặt hàng:</string>
    <string name="label_payment">Thanh toán:</string>
    <string name="label_menu">Danh sách sản phẩm:</string>
</resources>