<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_50"
    tools:context=".view.activity.SplashActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_text"
        android:gravity="center"
        tools:ignore="ContentDescription"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/define_dimen_300"
            android:layout_height="@dimen/define_dimen_300"
            android:src="@drawable/img_splash" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:gravity="center"
            android:text="@string/app_name_1"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/germanduy"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/define_dimen_10"
            android:gravity="center"
            android:text="@string/splash_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xsmall" />

    </LinearLayout>

</RelativeLayout>