<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="CueDetailViewModel"
            type="com.example.billiardshop.viewmodel.CueDetailViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:ignore="ContentDescription">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/black_50">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/define_dimen_45"
                android:layout_height="@dimen/define_dimen_45"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/define_dimen_6"
                android:padding="@dimen/define_dimen_10"
                android:onClick="@{() -> CueDetailViewModel.onClickButtonBack()}"
                android:src="@drawable/ic_back_white_36" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cue_detail_title"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xnormal"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/img_cart"
                android:layout_width="@dimen/define_dimen_45"
                android:layout_height="@dimen/define_dimen_45"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/define_dimen_4"
                android:padding="@dimen/define_dimen_6"
                android:src="@drawable/ic_cart_white_36"
                android:onClick="@{() -> CueDetailViewModel.onClickAddToCart()}"
                android:visibility="@{CueDetailViewModel.isCueInCart ? View.GONE : View.VISIBLE}" />
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_food"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/define_dimen_300"
                        android:scaleType="centerCrop"
                        app:url_image="@{CueDetailViewModel.mCue.banner}"
                       />

                    <TextView
                        android:id="@+id/tv_sale_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/define_dimen_10"
                        android:background="@color/red_80"
                        android:padding="@dimen/define_dimen_6"
                        android:text="@{CueDetailViewModel.strSale}"
                        android:visibility="@{CueDetailViewModel.isSale ? View.VISIBLE : View.GONE}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_xsmall"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/define_dimen_10">

                    <TextView
                        android:id="@+id/tv_food_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{CueDetailViewModel.mCue.name}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/define_dimen_5"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/price_label"
                            android:textColor="@color/grey_50"
                            android:textSize="@dimen/text_size_small" />

                        <TextView
                            android:id="@+id/tv_price_sale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="@dimen/define_dimen_5"
                            android:layout_marginTop="@dimen/define_dimen_2"
                            android:text="@{CueDetailViewModel.strRealPrice}"
                            android:textColor="@color/red_80"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="@dimen/define_dimen_5"
                            android:text="@{CueDetailViewModel.getStrPriceOld(tvPrice)}"
                            android:visibility="@{CueDetailViewModel.isSale ? View.VISIBLE : View.GONE}"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_small" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/define_dimen_20"
                        android:layout_marginBottom="@dimen/define_dimen_20"
                        android:background="@color/black_50" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/description_label"
                        android:textColor="@color/black_50"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_food_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/define_dimen_5"
                        android:text="@{CueDetailViewModel.mCue.description}"
                        android:textColor="@color/black_50"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/tv_more_image_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/define_dimen_20"
                        android:text="@string/more_image_label"
                        android:visibility="@{CueDetailViewModel.isMoreImages ? View.VISIBLE : View.GONE}"
                        android:textColor="@color/black_50"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_images"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="-10dp"
                        android:visibility="@{CueDetailViewModel.isMoreImages ? View.VISIBLE : View.GONE}"
                        android:focusable="false"
                        app:list_more_image="@{CueDetailViewModel.listMoreImages}"
                        android:nestedScrollingEnabled="false" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvAddToCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/define_dimen_10"
                    android:layout_marginTop="@dimen/define_dimen_10"
                    android:layout_marginEnd="@dimen/define_dimen_10"
                    android:layout_marginBottom="@dimen/define_dimen_20"
                    android:background="@drawable/bg_green_shape_corner_6"
                    android:gravity="center"
                    android:padding="@dimen/define_dimen_12"
                    android:onClick="@{() -> CueDetailViewModel.onClickAddToCart()}"
                    android:text="@{CueDetailViewModel.getStrStatusCart(tvAddToCart)}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</layout>
